force-app/main/default/objects/Lead/fields/CountryAlpha2Code__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha2Code__c</fullName>
    <label>Country Alpha2Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>