force-app/main/default/objects/Lead/fields/CountryAlpha3Code__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha3Code__c</fullName>
    <label>Country Alpha3Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>