force-app/main/default/objects/Lead/fields/CountryRegionalBlocs__c.field-meta.xml
<CustomField>
    <fullName>CountryRegionalBlocs__c</fullName>
    <label>Country Regional Blocs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>