force-app/main/default/objects/Lead/fields/NN_Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>NN_Alpha3Code__c</fullName>
    <label>Alpha3Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>