force-app/main/default/objects/Lead/fields/NN_CountryCapitalCity__c.field-meta.xml
<CustomField>
    <fullName>NN_CountryCapitalCity__c</fullName>
    <label>Country Capital City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>