force-app/main/default/objects/Lead/fields/NN_CountryRegion__c.field-meta.xml
<CustomField>
    <fullName>NN_CountryRegion__c</fullName>
    <label>Country Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>