force-app/main/default/objects/Lead/fields/NN_OwnerSince__c.field-meta.xml
<CustomField>
    <fullName>CM_OwnerSince__c</fullName>
    <label>Owner Since</label>
    <type>DateTime</type>
</CustomField>