force-app/main/default/objects/Lead/validationRules/PreventOwnerChange.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventOwnerChange</fullName>
    <active>true</active>
    <description>Prevents the owner to be changed if Country, LeadSource and No. of Employees are NOT filled in.</description>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
OR(
    ISBLANK(TEXT(LeadSource)),
    (ISBLANK(Country) &amp;&amp; ($Profile.Name != &apos;System Administrator&apos;)),
    (ISBLANK(NumberOfEmployees) &amp;&amp; ($Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Contract Manager&apos;))
))</errorConditionFormula>
    <errorMessage>Please fill in the Lead Source, Country and Number of Employees before changing the Owner.</errorMessage>
</ValidationRule>